# bot

./: .gitignore
agente-criativa-xyz/: README.md  README_DOCKER.md  build.sh  docker-compose.yml  docker.env copy.example  package-lock.json
agente-criativa-xyz/agent_logic_python/: .dockerignore  Dockerfile  agent.py  main.py  requirements.txt
agente-criativa-xyz/agent_logic_python/crew/: agents.py  crew.py  tasks.py
agente-criativa-xyz/agent_logic_python/mcp/: clickup.py  google_calendar.py
agente-criativa-xyz/agent_logic_python/services/: clickup_example.py  clickup_service.py  email_service.py
agente-criativa-xyz/agent_logic_python/tools/: contact_tool.py  date_tool.py  protocol_tool.py
agente-criativa-xyz/agent_scheduler/: README.md  pyproject.toml
agente-criativa-xyz/agent_scheduler/src/agent_scheduler/: crew.py  main.py
agente-criativa-xyz/whatsapp_handler_node/: Dockerfile  index.js  package-lock.json  package.json
agente-criativa-xyz/whatsapp_handler_node/.wwebjs_cache/: 2.3000.1024461766.html
configs/: arquitetura_projeto_gemini.md  auth.md
docs/: diagrama.md  env.example  planing.md  relatorio_gemini_docker_mcp_crewia.md  review_planning.md  ✅ TESTE TÉCNICO – CRIAÇÃO DE AGENTE VIRTUAL COM AUTOMAÇÃO.md
