[project]
name = "agent_scheduler"
version = "0.1.0"
description = "agent_scheduler using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
agent_scheduler = "agent_scheduler.main:run"
run_crew = "agent_scheduler.main:run"
train = "agent_scheduler.main:train"
replay = "agent_scheduler.main:replay"
test = "agent_scheduler.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
